todo update last today

--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,6 @@
 - install mapr-streams-python
 - deploy to poc system mapr 5.2.2 python mapr stream to hive
 - code and research spark streaming on mapr
+- code spark query to visualization using bokeh/tableu.
+- code mllib using regresion and classification using spark mllib
+- deep learning using tensorflow
