update todo.txt 115208222017

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-- install pyspark
-- install mapr-streams-python
+- install pyspark - DONE
+- install mapr-streams-python - DONE
 - deploy to poc system mapr 5.2.2 python mapr stream to hive
 - code and research spark streaming on mapr
 - code spark query to visualization using bokeh/tableu.
